# snappy-copy

./: .gitignore  CMakeLists.txt  config.cmake.h  snappy-c.h  snappy-internal.h  snappy-sinksource.h  snappy-stubs-internal.h  snappy-stubs-public.cmake.h.in  snappy-test.cc  snappy-test.h  snappy-visibility.h  snappy.cc  snappy.h  snappy_unittest.cc
